--- a/views/notifier_publisher/config.erb
+++ b/views/notifier_publisher/config.erb
@@ -19,13 +19,13 @@
   f.entry :title => 'User',
           :field => :user,
           :description => 'IRC User' do
-    f.textbox :clazz => 'required', :default => 'hoge'
+    f.textbox :clazz => 'required'
   end
 
   f.entry :title => 'Channel',
           :field => :channel,
           :description => 'IRC Channel' do
-    f.textbox :clazz => 'required', :default => '#hoge'
+    f.textbox :clazz => 'required'
   end
 
   f.entry :title => 'Message',
