parameters support env

--- a/views/notifier_publisher/config.erb
+++ b/views/notifier_publisher/config.erb
@@ -31,7 +31,7 @@
   f.entry :title => 'Message',
           :field => :message,
           :description => 'IRC Message' do
-    f.textarea :clazz => 'required', :default => 'hoge'
+    f.textarea :clazz => 'required'
   end
 %></table>
 
