--- a/views/notifier_publisher/config.erb
+++ b/views/notifier_publisher/config.erb
@@ -35,37 +35,35 @@
       :minimum => 1 do
 %>
   <table width="100%">
-<%
-      f.entry :title => "JobState",
-              :field => :job_state do
-%>
-    <select name="jobState">
-<%
-#       f.option :selected => "selected", :value => "Success"
-#       f.option :value => "Failure"
-%>
-    </select>
-<%
-      end
-%>
-    </select>
-<%
 
-      f.entry :title => 'Message',
-              :field => :message,
-              :description => 'IRC Message' do
-        f.textarea :clazz => 'required'
-      end
+    <% f.entry :title => "Trigger",
+               :field => :trigger do %>
+      <select name="trigger">
+        <% f.option :value => "stable", :selected => "true" do %>Stable<% end %>
+        <% f.option :value => "unstable" do %>Unstable<% end %>
+        <% f.option :value => "stable_or_unstable" do %>Stable or unstable but not failed<% end %>
+        <% f.option :value => "unstable_or_failed" do %>Unstable or failed but not stable<% end %>
+        <% f.option :value => "failed" do %>Failed<% end %>
+        <% f.option :value => "complete" do %>Complete<% end %>
+      </select>
+    <% end %>
+<%
+    f.entry :title => 'Message',
+            :field => :message,
+            :description => 'IRC Message' do
+      f.textarea :clazz => 'required'
+    end
 
-      f.entry do
-        f.repeatableDeleteButton
-      end
+    f.entry do
+      f.repeatableDeleteButton
+    end
 %>
   </table>
 <%
     end
   end
-%></table>
+%>
+</table>
 
 <%
   end
